objects/TEMarketing__me_recordtype__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TEMarketing__Is_OCR_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable or disable OCR for the particular record type</description>
        <inlineHelpText>To enable or disable OCR for the particular record type</inlineHelpText>
        <label>OCR: Is Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Age__c</fullName>
        <defaultValue>6</defaultValue>
        <description>The number of months that an MQL will exist.  Typically this is the average sales cycle.</description>
        <inlineHelpText>The number of months that an MQL will exist.  Typically this is the average sales cycle.</inlineHelpText>
        <label>MQL Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Number_of_previous_months_to_look_for_Op__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Number of previous months to look for an MQL Record related to an Opportunity Contact Role</description>
        <inlineHelpText>Number of previous months to look for Opportunities</inlineHelpText>
        <label>MSO: Months to look for MQL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_1_Error_Message__c</fullName>
        <description>If you wish to customize the error message from the default, you can enter it here.</description>
        <inlineHelpText>If you wish to customize the error message from the default, you can enter it here.</inlineHelpText>
        <label>OCR: Threshold 1 - Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_1_Roles__c</fullName>
        <description>The number of contact roles required when OCR kicks in for opportunities over a certain probability.</description>
        <inlineHelpText>The number of contact roles required when OCR kicks in for opportunities over a certain probability.</inlineHelpText>
        <label>OCR: Threshold 1 - Roles</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_1__c</fullName>
        <description>The probability value for when OCR kicks in.</description>
        <inlineHelpText>The probability value for when OCR kicks in.</inlineHelpText>
        <label>OCR: Threshold 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_2_Error_Message__c</fullName>
        <description>If you wish to customize the error message from the default, you can enter it here.</description>
        <inlineHelpText>If you wish to customize the error message from the default, you can enter it here.</inlineHelpText>
        <label>OCR: Threshold 2 - Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_2_Roles__c</fullName>
        <description>The number of contact roles required for the 2nd threshold</description>
        <inlineHelpText>The number of contact roles required for the 2nd threshold</inlineHelpText>
        <label>OCR: Threshold 2 - Roles</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Threshold_2__c</fullName>
        <description>The dollar amount for when the second threshold kicks in - typically a larger deal size.</description>
        <inlineHelpText>The dollar amount for when the second threshold kicks in - typically a larger deal size.</inlineHelpText>
        <label>OCR: Threshold 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__RecordTypeId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Please enter the Salesforce Id of the opportunity record type</description>
        <inlineHelpText>Please enter the Salesforce Id of the opportunity record type</inlineHelpText>
        <label>Opp RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TEMarketing__Time_to_include_campaign_responses__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Length of time to include campaign responses in revenue attribution in months</description>
        <inlineHelpText>Length of time to include campaign responses in revenue attribution in months</inlineHelpText>
        <label>Time to include campaign responses</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Validate_opps_in_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCR: Validate opps in Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Marketing Enablement - Opp Record Type</label>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__RecordTypeId__c</columns>
        <columns>TEMarketing__Is_OCR_Enabled__c</columns>
        <columns>TEMarketing__OCR_Threshold_1__c</columns>
        <columns>TEMarketing__OCR_Threshold_1_Roles__c</columns>
        <columns>TEMarketing__OCR_Threshold_2__c</columns>
        <columns>TEMarketing__OCR_Threshold_2_Roles__c</columns>
        <columns>TEMarketing__Number_of_previous_months_to_look_for_Op__c</columns>
        <columns>TEMarketing__MQL_Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Details</label>
        <language>en_US</language>
    </listViews>
</CustomObject>